--- a/platformio.ini
+++ b/platformio.ini
@@ -3,8 +3,9 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 upload_port = COM3
-monitor_speed = 115200
 upload_speed = 921600 ;115200
+monitor_port = COM3
+monitor_speed = 115200
 
 build_flags = 
 	-I include
